--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react": "^17.0.1",
     "react-chartjs-2": "2.11.1",
     "react-countup": "^4.3.3",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
     "react-helmet-async": "^1.0.9",
